--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#010541" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://i.imgur.com/VxciJYs.png" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A simple game to help you procrastinate"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
